Allow using regex objects from the selection in operations
Also add better error handling

--- a/music_symfarm/defaults.yaml
+++ b/music_symfarm/defaults.yaml
@@ -76,7 +76,7 @@ fallbacks:
 
 # The overrides section contains a list of overrides for the scanned music.
 # Generally:
-#  1. Match based on one or more criteria
+#  1. Match based on one or more criteria (all must match)
 #  2. Apply one or more operations
 #  3. Order matters (all matching operations will be executed in the specified order)
 #
@@ -133,7 +133,7 @@ fallbacks:
 #    - `path_template`:
 #      - The full path template to use (relative to the output directory)
 #      - Will override all other settings that affect the path
-#      - Ex: "Other songs/{ext}/{filename}"
+#      - ex: "Other songs/{ext}/{filename}"
 #    - `ignore`:
 #      - Don't link this file
 #    - `is_compilation`:
@@ -146,12 +146,18 @@ fallbacks:
 #        to keep them grouped into a single album.
 #
 #  - Values:
-#    - If a value is null, the tag will be removed from the song
+#    - If a value is null, the tag will be removed
 #    - Processed as Python templates
-#    - See https://docs.python.org/3/library/string.html#formatspec
+#      - See https://docs.python.org/3/library/string.html#formatspec
 #    - Any metadata from the song can be used by the template
 #      - ex: "{ARTIST}"
-#    - In addition, there is a regex formatter:
+#    - If a key's selection was a regular expression, the match can be expanded
+#      - See https://docs.python.org/3/library/re.html#re.Match.expand
+#      - To expand a variable, use the format "KEY/<template>/" for the key name
+#      - ex: "{ARTIST/\\1/}" (when ARTIST was selected as a regex with at least 1 group)
+#      - A non-expanded regex will be formatted as the entire match (ie. the entire tag)
+#    - Variables can be formatted using regex:
+#      - See https://docs.python.org/3/library/re.html#re.sub
 #      - By using a format specifier like "/match/sub/<normal format spec>",
 #        the regex substitution will first be applied before the rest of the
 #        format spec is processed
@@ -159,6 +165,9 @@ fallbacks:
 #            the leading digits off it, and insert them into the value.
 #            This specific case is useful for assigning disc numbers to files
 #            based on the filename if they aren't included in the tags.
+#    - Both of the above can be combined:
+#      - ex: '{ARTIST/\\1/:/(.*) A (.*)/\\1 a \\2/}' will take the first component
+#            of the ARTIST regex match, then lowercase the " A " in the middle of it
 #
 # Some full examples are provided below (note the position of the "-"s)
 #overrides:
@@ -185,6 +194,12 @@ fallbacks:
 #  # (in this case it's being used to do a case-insensitive match)
 #  - - ALBUMARTIST: "/(?i:band of the year)/"
 #    - ALBUMARTIST: "Band of the Year"
+#
+#  # Use regex to pull disc numbers out of an album title
+#  # (sets both the album and discnumber from the same match)
+#  - - ALBUM: "/(.*) \[CD (\d+)\]/"
+#    - ALBUM: "{ALBUM/\\1/}"
+#      DISCNUMBER: "{ALBUM/\\2/}"
 #
 #  # Force all albums with an ALBUMARTIST of "Various" or "Various Artists"
 #  # to be compilations (this is a fairly standard convention).
