Support the ID3 TDRL (release time) frame
This is mapped to the `RELEASEDATE` field by taglib.

Also re-orders the `DATE` tag fallbacks to consistently prefer the
original version of dates. Previously "*DATE" tags were always preferred
before "*YEAR" tags.

Note that running this command:
```
eyeD3 --remove-all \
   --recording-date 2001-01-01 \
   --orig-release-date 2002-02-02 \
   --release-date 2003-03-03 \
   --encoding-date 2004-04-04 \
   --tagging-date 2005-05-05 \
   <mp3 file>
```

results in the following data from `taglib`:
```
{
   'DATE': ['2001-01-01'],
   'ORIGINALDATE': ['2002-02-02'],
   'RELEASEDATE': ['2003-03-03'],
   'ENCODINGTIME': ['2004-04-04'],
   'TAGGINGDATE': ['2005-05-05']
}
```

--- a/music_symfarm/defaults.yaml
+++ b/music_symfarm/defaults.yaml
@@ -52,7 +52,7 @@ structure:
 # Note that the tag name itself will not be tried unless it is added to the list
 # ie: Use `DATE: ["DATE", "YEAR"]` vs `DATE: ["YEAR"]`
 tagmap:
-  DATE: ["ORIGINALDATE", "ORIGDATE", "DATE", "ORIGINALYEAR", "ORIGYEAR", "YEAR"]
+  DATE: ["ORIGINALDATE", "ORIGDATE", "ORIGINALYEAR", "ORIGYEAR", "RELEASEDATE", "DATE", "YEAR"]
   DISCNUMBER: ["DISCNUMBER", "DISKNUMBER", "DISC", "DISK"]
   DISCTOTAL: ["DISCTOTAL", "DISKTOTAL", "TOTALDISCS", "TOTALDISKS"]
   TRACKTOTAL: ["TRACKTOTAL", "TOTALTRACKS"]
